--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="app_name">НМедиа</string>
     <string name="nmedia">НМедиа!</string>
-    <string name="description_post_author_avatar">Аватар автора поста</string>
-    <string name="description_post_menu">Меню поста</string>
+    <string name="post_menu">Меню поста</string>
+    <string name="post_avatar">Аватар поста</string>
+    <string name="end_line">Конец поста</string>
 </resources>
