--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -5,4 +5,9 @@
     <string name="post_menu">Меню поста</string>
     <string name="post_avatar">Аватар поста</string>
     <string name="end_line">Конец поста</string>
+    <string name="description_post_save">Сохранить</string>
+    <string name="menu_remove">Удалить</string>
+    <string name="post_text">Текст поста</string>
+    <string name="menu_edit">Редактировать</string>
+    <string name="error_empty_content">Контент не может быть пустым</string>
 </resources>
