add crud v.1.2 (cancel edit)

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -10,4 +10,6 @@
     <string name="post_text">Текст поста</string>
     <string name="menu_edit">Редактировать</string>
     <string name="error_empty_content">Контент не может быть пустым</string>
+    <string name="edit_bar">Редактирование сообщения</string>
+    <string name="cancel_button">Отмена редактирования</string>
 </resources>
