--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -6,6 +6,7 @@
     <string name="end_line">Конец поста</string>
     <string name="description_post_save">Сохранить</string>
     <string name="description_post_cancel">Отменить</string>
+    <string name="chooser_share_post">Поделиться</string>
     <string name="menu_remove">Удалить</string>
     <string name="menu_edit">Редактировать</string>
     <string name="error_empty_content">Контент не может быть пустым</string>
