--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="end_line">End line</string>
     <string name="description_post_save">Save</string>
     <string name="description_post_cancel">Cancel</string>
+    <string name="chooser_share_post">Share post</string>
     <string name="menu_remove">Remove</string>
     <string name="menu_edit">Edit</string>
     <string name="error_empty_content">Content can\'t be empty</string>
