--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -12,6 +12,8 @@
     <string name="error_empty_content">Контент не может быть пустым</string>
     <string name="play_video">Воспроизвести видео</string>
     <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string>
+    <string name="notification_other">Привет от Nmedia! Заходи, мы соскучились!</string>
+    <string name="notification_post_published">Пользователь %1$s опубликовал новый пост</string>
     <string name="channel_remote_name">Уведомления с сервера</string>
     <string name="channel_remote_description">Уведомления с удалённого сервера</string>
 </resources>
