--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="sign_up">Sign Up</string>
     <string name="sign_out">Sign Out</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="notification_for_user" translatable="false">User with id: %1$s get notification: %2$s</string>
 </resources>
